k8s/fault-injection.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - nginx-service
  http:
  - fault:
      abort:
        httpStatus: 504
        percentage:
          value: 100
      # delay:
      #   fixedDelay: 2s
      #   percentage:
      #     value: 100
         
    route:
    - destination:
        host: nginx-service
        subset: all


---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  subsets:
    - name: all
      labels:
        app: nginx
